--- a/css/blogpost1.css
+++ b/css/blogpost1.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: BebasNeue;
-  src: url(fonts/BebasNeue-Regular.otf);
+  src: url(../fonts/BebasNeue-Regular.otf);
 }
 @fontface {
   font-family: ChasingEmbers;
-  src: url(fonts/ChasingEmbers.otf);
+  src: url(../fonts/ChasingEmbers.otf);
 }
 @fontface {
   font-family: MoonFlowerBold;
-  src: url(fonts/MoonFlowerBold.ttf);
+  src: url(../fonts/MoonFlowerBold.ttf);
 }
 body {
   margin: 0;
@@ -27,7 +27,7 @@ ul {
   float: right;
   align-items: center;
   height: 100%;
-  font-family: 'Bebas Neue'; sans-serif;
+  font-family: 'BebasNeue'; sans-serif;
 }
 a {
   color: white;
@@ -63,13 +63,13 @@ p.paragraphs {
   margin-right: 7%;
   font-size: 1.1em;
   line-height: 160%;
-  font-family: 'Open Sans'; serif;
+  font-family: 'OpenSans'; serif;
 }
 p.center {
   text-align: center;
   font-size: 1.1em;
   line-height: 160%;
-  font-family: 'Open Sans'; serif;
+  font-family: 'OpenSans'; serif;
 }
 .together, .togetherright {
   width: 47%;
