--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: BebasNeue;
-  src: url(fonts/BebasNeue-Regular.otf);
+  src: url(../fonts/BebasNeue-Regular.otf);
 }
 @fontface {
   font-family:ChasingEmbers;
-  src: url(fonts/ChasingEmbers.otf);
+  src: url(../fonts/ChasingEmbers.otf);
 }
 body {
   margin: 0;
@@ -23,7 +23,7 @@ ul {
   float: right;
   align-items: center;
   height: 100%;
-  font-family: 'Bebas Neue'; sans-serif;
+  font-family: 'BebasNeue'; sans-serif;
 }
 a {
   color: white;
