--- a/css/blog.css
+++ b/css/blog.css
@@ -1,14 +1,14 @@
 @font-face {
   font-family: BebasNeue;
-  src: url(../fonts/BebasNeue-Regular.otf);
+  src: url(https://www.priscillacwong.com/fonts/BebasNeue-Regular.otf);
 }
 @fontface {
   font-family: ChasingEmbers;
-  src: url(../fonts/ChasingEmbers.otf);
+  src: url(https://www.priscillacwong.com/fonts/ChasingEmbers.otf);
 }
 @fontface {
   font-family: MoonFlowerBold;
-  src: url(MoonFlowerBold.ttf);
+  src: url(https://www.priscillacwong.com/fonts/MoonFlowerBold.ttf);
 }
 body {
   margin: 0;
