--- a/css/blog.css
+++ b/css/blog.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: BebasNeue;
-  src: url(https://www.priscillacwong.com/fonts/BebasNeue-Regular.otf);
-}
-@fontface {
-  font-family: ChasingEmbers;
-  src: url(https://www.priscillacwong.com/fonts/ChasingEmbers.otf);
-}
-@fontface {
-  font-family: MoonFlowerBold;
-  src: url(https://www.priscillacwong.com/fonts/MoonFlowerBold.ttf);
-}
 body {
   margin: 0;
 }
@@ -27,8 +15,10 @@ ul {
   float: right;
   align-items: center;
   height: 100%;
-  font-family: 'BebasNeue'; sans-serif;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 300;
   padding: 1% 0;
+  font-size: .8em;
 }
 a {
   color: white;
@@ -45,7 +35,7 @@ li {
 img.blogphoto {
   width: 20%;
   height: 20%;
-  padding-top: 5px;
+  padding-top: 10px;
 }
 img.title {
   width: 100%;
@@ -55,8 +45,9 @@ img.title {
   background-image: url("../images/greece.jpeg");
   background-size: cover;
   height: 30vh;
-  font-family: 'BebasNeue'; sans-serif;
-  font-size: 2em;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  font-size: 2.3em;
   color: white;
   display: flex;
   justify-content: center;
@@ -70,11 +61,13 @@ img.title {
 }
 h1.welcome {
   padding-left: 40px;
-  font-size: 10em;
-  font-family: 'MoonFlowerBold';
+  font-size: 6em;
+  font-family: 'Mali';
+  font-weight: 300;
 }
-h1.blog {
+.blogtitle {
   text-align: center;
+  font-family: 'Oswald';
 }
 img.blog {
   display: block;
@@ -84,7 +77,7 @@ img.blog {
 }
 li.blog {
   color: white;
-  font-family: 'BebasNeue';
+  font-family: 'Oswald', sans-serif;
   font-size: .7em;
   border: solid;
   border-width: 1px;
