--- a/css/blogpost1.css
+++ b/css/blogpost1.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: BebasNeue;
-  src: url(../fonts/BebasNeue-Regular.otf);
-}
-@fontface {
-  font-family: ChasingEmbers;
-  src: url(../fonts/ChasingEmbers.otf);
-}
-@fontface {
-  font-family: MoonFlowerBold;
-  src: url(../fonts/MoonFlowerBold.ttf);
-}
 body {
   margin: 0;
 }
@@ -27,7 +15,9 @@ ul {
   float: right;
   align-items: center;
   height: 100%;
-  font-family: 'BebasNeue'; sans-serif;
+  font-family: 'Oswald'; sans-serif;
+  font-weight: 300;
+  font-size: .8em;
 }
 a {
   color: white;
@@ -41,8 +31,9 @@ li {
   text-decoration: none;
   text-align: center;
 }
-h1.blog {
+.blogtitle {
   text-align: center;
+  font-family: 'Oswald';
 }
 img.blog {
   display: block;
@@ -61,15 +52,15 @@ p.paragraphs {
   text-align: justify;
   margin-left: 7%;
   margin-right: 7%;
-  font-size: 1.1em;
+  font-size: 1em;
   line-height: 160%;
-  font-family: 'OpenSans'; serif;
+  font-family: 'Open Sans'; serif;
 }
 p.center {
   text-align: center;
-  font-size: 1.1em;
+  font-size: 1em;
   line-height: 160%;
-  font-family: 'OpenSans'; serif;
+  font-family: 'Open Sans'; serif;
 }
 .together, .togetherright {
   width: 47%;
